project/kubernetes/telegraf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf
  namespace: ase-p1g4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegraf
  strategy: {}
  template:
    metadata:
      labels:
        app: telegraf
    spec:
      containers:
        - args: ["telegraf", "--config", "http://ase-p1g4.k3s/api/v2/telegrafs/0d2368041a2a5000"]
          image: telegraf
          name: telegraf
          resources: {}
      restartPolicy: Always
