project/kubernetes/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: influxdb
  name: influxdb
  namespace: ase-p1g4
spec:
  clusterIP: None
  ports:
    - name: "8086"
      port: 8086
      targetPort: 8086
  selector:
    app: influxdb
