project/kubernetes/mqtt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqtt
  namespace: ase-p1g4
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: mqtt
