project/kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: ase-p1g4
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx
