project/kubernetes/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  namespace: ase-p1g4
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
    - hosts:
        - ase-p1g4.k3s
      secretName: traefik-cert
  rules:
    - host: ase-p1g4.k3s
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx
              port: 
                number: 80
